fix for missing background

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ html {
 }
 
 body {
-    background: url("assets/back_1.jpg") no-repeat;
+    background-image: url("assets/back_1.jpg");
+    background-repeat: no-repeat;
     background-blend-mode: screen;
     backdrop-filter: blur(25px);
     background-position: top;
